add login with detect id from firebase

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
     <data>
         <variable
             name="vm"
             type="com.pkl.gits.simplechat.login.viewmodel.LoginActivityVM"/>
     </data>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,12 +23,19 @@
         android:layout_height="wrap_content"
         android:hint="Username"
         android:inputType="text"
+        android:text="@={vm.LoginEmail}"
         android:layout_margin="20dp"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:text="@={vm.LoginPass}"
         android:hint="Password"
         android:layout_margin="20dp"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:onClick="@{(v)->vm.onClickLogin(v)}"/>
 </LinearLayout>
 </layout>
